--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -80,7 +80,7 @@ p {
 }
 
 h1 {
-  margin-block: var(--spacing-xxl);
+  margin-block: var(--spacing-xl) var(--spacing-xxl);
   font-size: var(--h1);
 }
 
